--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,12 +10,16 @@ services:
       - backend
     env_file:
       - .env
+    volumes:
+      - ./data:/app/data
 
   backend:
     build:
       context: .
       dockerfile: backend/Dockerfile
     ports:
-      - "8000:8000"
+      - "5001:5001"
     env_file:
       - .env
+    volumes:
+      - ./data:/app/data
