--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./certs:/etc/nginx/certs:ro  # Your certs folder with cert.pem and key.pem
+      - /etc/letsencrypt/live/ethqna.xyz:/etc/nginx/certs:ro  # Your certs folder with cert.pem and key.pem
     depends_on:
       - frontend
 
