--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,8 @@ services:
       - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - /etc/letsencrypt/live/ethqna.xyz:/etc/nginx/certs:ro  # Your certs folder with cert.pem and key.pem
+      - /etc/letsencrypt/live/ethqna.xyz/fullchain.pem:/etc/nginx/certs/fullchain.pem:ro
+      - /etc/letsencrypt/live/ethqna.xyz/privkey.pem:/etc/nginx/certs/privkey.pem:ro  # Your certs folder with cert.pem and key.pem
     depends_on:
       - frontend
 
